--- a/css/base.css
+++ b/css/base.css
@@ -267,7 +267,9 @@ li {
 .middle {
   vertical-align: middle;
 }
-
+.font12 {
+  font-size: 12px;
+}
 .text-right {
   text-align: right;
 }
@@ -318,6 +320,9 @@ li {
 .mt9 {
   margin-top: -9.5px;
 }
+.mt10 {
+  margin-top: 10px;
+}
 .mt20 {
   margin-top: 20px !important;
 }
@@ -336,6 +341,9 @@ li {
 
 .w1 {
   width: 100% !important;
+}
+.w07 {
+  width: 69%;
 }
 .w08 {
   width: 80%;
@@ -404,7 +412,7 @@ li {
 }
 
 .color-gray {
-  color: #ddd;
+  color: #ada8a8;
 }
 
 .color-red {
