--- a/css/management.css
+++ b/css/management.css
@@ -107,7 +107,7 @@ padding: 2px 5px;
 
 }
 .scheduling-content {
-  height: 600px;
+  height: 500px;
   margin:16px 0 0 6px;
   padding: 8px 20px;
   background-color: #ffffff;
@@ -282,4 +282,45 @@ input[type="date" i]{
 }
 .table-sum tr:last-child{
   border-top:1px solid #dddddd;
+}
+
+
+/*种植管理*/
+  .tab {
+    width: 100%;
+    float: left;
+    margin-top: 20px;
+  }
+  .tab ul{
+    border-bottom: 1px solid #479e7d;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .tab li{
+    display: inline-block;
+    margin-right: 4px;
+    padding: 9px 20px;
+}
+.grow-content {
+  width: 300px;
+  height: 100px;
+  display: inline-block;
+  padding: 6px;
+  margin: 0 0 20px 20px;
+  border:1px solid #dddddd;
+  box-sizing:border-box;
+}
+
+.grow-img {
+  height: 88px;
+  width: 88px;
+  text-align: center;
+}
+.grow-img img {
+  width: 70px;
+  height: 70px;
+}
+.grow-time {
+  height: 6.5px;
+  margin-right: -5px;
 }
