--- a/css/management.css
+++ b/css/management.css
@@ -111,6 +111,7 @@ padding: 2px 5px;
   margin:16px 0 0 6px;
   padding: 8px 20px;
   background-color: #ffffff;
+  overflow: auto;
 }
 .scheduling-search input{
   width: 210px;
@@ -290,7 +291,7 @@ input[type="date" i]{
     width: 100%;
     margin-top: 20px;
   }
-  .tab-grow ul{
+  .tab-grow-ul{
     border-bottom: 1px solid #479e7d;
     width: 100%;
     margin-bottom: 20px;
@@ -308,7 +309,16 @@ input[type="date" i]{
   margin: 0 0 20px 20px;
   border:1px solid #dddddd;
   box-sizing:border-box;
+  position: relative;
 
+}
+.arrow-grow {
+  position: absolute;
+  bottom: -13px;
+  left: 104px;
+}
+.to-grow-message {
+  cursor: pointer;
 }
 
 .grow-img {
@@ -328,31 +338,51 @@ input[type="date" i]{
 /*绿色弹窗*/
 .grow-message {
   background-color: #479e7d;
-  color:#ffffff;
+  color: #ffffff;
   height: 255px;
-  width: 1127px;
+  width: 1124px;
   padding: 20px 15px;
-  box-sizing:border-box;
+  box-sizing: border-box;
+  position: absolute;
+  top: 108px;
+  left: 0;
+  z-index: 99999;
+}
+.close-grow {
+  position: absolute;
+  right: 13px;
+  top: 5px;
+  cursor: pointer;
 }
 .grow-message-img {
    width: 180px;
    text-align: center;
+   position: relative;
 }
 .grow-message-img img{
   width: 180px;
   height: 180px;
   margin-bottom: 6px;
 }
-.tab-mess {
-  height: 203px;
-    overflow: hidden;
-    padding-right: 10px;
-    margin-left: 10px;
-    float: left;
+.grow-message-img .grow-rule-img {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    top: -10px;
+    left: -10px;
 }
+.tab-mess {
+  height: 216px;
+  overflow: hidden;
+  padding-right: 10px;
+  margin-left: 10px;
+  float: left;
+  
+}
+
 .tab-message {
   height: 180px;
-  width: 74px;
+  width: 76px;
   padding: 10px 6px;
   text-align: center;
   background-color: rgba(0,0,0,.14);
@@ -409,4 +439,57 @@ input[type="date" i]{
    margin: 0 10px 0 6px;
    height:227px;
     width:10px;
+}
+/*环境监控*/
+.huanjing {
+  padding: 40px 0;
+}
+.huanjing .grow-mess-user {
+  width: 166px;
+}  
+.huanjing .stop {
+      width: 151px;
+    height: 95px;
+    border: 1px solid #eeeeee;
+    margin-right: -5px;
+    overflow: hidden;
+    box-sizing: border-box;
+    padding: 23px 0;
+    text-align: center;
+}
+
+/*农事信息*/ 
+.nongshi {
+  padding: 16px 0;
+}
+.to-record {
+    width: 80px;
+    text-align: center;
+    height: 25px;
+    margin-right: 14px;
+    vertical-align: middle;
+    border: 1px solid #eeeeee;
+    color: #ffffff;
+    box-sizing: border-box;
+    border-radius: 2px;
+    float: left;
+}
+.record-img {
+ height:203px;
+ width:348px;
+ float: left;
+ margin-right: 14px;
+}
+.nongshi table {
+  margin-left: 20px;
+  text-align: center;
+}
+.nongshi  tr td {
+  width: 280px;
+}
+.nongshi td span {
+  margin-right: 24px;
+}
+.nongshi  tr td:first-child,.nongshi  tr td:last-child {
+  width: 25px;
 }
